--- a/index.html
+++ b/index.html
@@ -42,16 +42,9 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="./img/kilamba/k1.jpg" width="400px" height="400px" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="./img/kilamba/k2.jpg" width="400px" height="400px" alt="">
-                        </div>
-                        <div class="swiper-slide">
-                            <video muted autoplay="true" loop="true" poster="img/exterior-de-um-edificio-vista.jpg"
+                            <video title="projecto" muted autoplay="true" loop="true" poster="img/exterior-de-um-edificio-vista.jpg"
                                 preload="auto">
-                                <source src="./img" type="video/mp4">
+                                <source src="./img/video.mp4" type="video/mp4">
                             </video>
                         </div>
 
@@ -67,8 +60,11 @@
             </div>
             <div class="conteudo container">
                 <h2>Bem-vindo à Morais e Higino</h2>
-                <p>"A Morais e Higino é uma empresa de comercio de imoveis e prestação de serviços de construção
-                    residencial,comercial,indústrial."</p>
+                <p>"A Morais e Higino é uma empresa que esta destacando no mercado, oferecendo uma ampla gama de serviços de
+                    arquitetura e construção. Nossa expertise abrange desde o comércio de imóveis até a prestação de
+                    serviços de construção residencial, comercial e industrial. Na Morais e Higino, buscamos realizar
+                    sonhos e transformar visões em realidade, criando espaços que encantam e funcionam de maneira
+                    excepcional."</p>
             </div>
         </section>
         <section name="sobre" id="sobre" class="sobre container">
